--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </div>
     <button class="play-button" onclick="startGame()">Play</button>
 
-    <script src="indexScript.js"></script>
+   <script src="indexScript.js" defer></script>
 </body>
 </html>
